--- a/clientapp/src/styles.css
+++ b/clientapp/src/styles.css
@@ -36,7 +36,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 }
 
 .collapse {
-  visibility: collapse;
+  display: none;
 }
 
 .alert {
